# pihpsdr-client

./: README.md  meson.build
docs/: DESIGN.md  PROTOCOL.md
src/: client.c  client.h  gui.c  panadapter.c  panadapter.h  render_test.c  spike.c  waterfall.c  waterfall.h
